--- a/bajo/bajo.tex
+++ b/bajo/bajo.tex
@@ -19,6 +19,21 @@
 	citecolor=red,				% y los de las citas rojos
 }
 \usepackage[table]{xcolor}      % Dar colores a las tablas
+\usepackage{etoolbox}			% Para el espaciado
+\usepackage[doublespacing]{setspace}
+\usepackage{listings}			% Para formatear código
+\lstset{						% El estilo para formatearlo sera este
+basicstyle=\small\singlespacing\ttfamily, % La letra tiene que ser pequeña y espaciado simple y monoespaciada
+keywordstyle=\bfseries\color{blue},		% las palabras clave tienen que estar en azul
+identifierstyle=\color{black},	% Los identificadores (funciones y variables)
+commentstyle=\color{gray},		% Los comentarios en gris
+language=C,						% El lenguaje de programación es C
+extendedchars=true,				% Usamos más caracteres que los ascii
+breaklines=true,				% Puede cortar las lineas que ocupen demasiado
+breakatwhitespace=true,			% 	pero tiene que hacerlo en los espacios en blanco
+frame=lines,					% Poner lineas al principio y al final del código para acotarlo
+tabsize=4,
+}
 \usepackage{eurosym}            % para tener el simbolo del euro
 \usepackage{setspace}           % Para hacer el espaciado entre líneas
 \setstretch{1.4}                %      1.4 del espacio normal
@@ -42,6 +57,7 @@
 % Sección de comandos personalizados        %
 % % % % % % % % % % % % % % % % % % % % % % %
 \newcommand{\reference}[2]{\hyperref[#1]{\textit{\ref*{#1} #2}}}
+\newcommand{\code}[1]{\texttt{#1}}
 \makeindex
 
 \begin{document}
